--- a/index.html
+++ b/index.html
@@ -21,75 +21,77 @@
       rel="stylesheet"
     />
 
-    <title>Devchallenges</title>
+    <!-- Google Fonts -->
 
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
-      ul {
-        padding-left: 24px;
-      }
+    <!-- Hojas de estilos -->
 
-      li {
-        margin-bottom: 8px;
-      }
+    <link rel="preload" href="normalize.css" as="style">
+    <link rel="preload" href="style.css" as="style">
 
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
+    <title>My Gallery</title>
 
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
 
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+    <header class="header">
+
+      <div class="perfil">
+
+        <div class="perfil__img">
+          <img src="profilePhoto.png" alt="Imagen Perfil">
+        </div>
+
+        <div class="perfil__info">
+          <h1 class="perfil__info__nombre">Rodney Cotton</h1>
+          <p class="perfil__info__ciudad">Helsinki, Finland</p>
+        </div>
+
+        <div class="perfil-acerca">
+
+          <div class="perfil-acerca__post">
+            <p class="perfil-acerca__post__numero">100</p>
+            <p class="perfil-acerca__post__titulo">Post</p>
+          </div>
+
+          <div class="perfil-acerca__follower">
+            <p class="perfil-acerca__follower__numero">2,242</p>
+            <p class="perfil-acerca__follower__titulo">Follower</p>
+          </div>
+
+          <div class="perfil-acerca__following">
+            <p class="perfil-acerca__following__numero">1,432</p>
+            <p class="perfil-acerca__following__titulo">Following</p>
+          </div>
+
+        </div>
+
+      </div>
+    </header>
+    
+    <main class="contenedor">
+
+      <div class="galeria">
+        <img src="photo1.png" alt="Imagen Galeria">
+        <img src="photo2.png" alt="Imagen Galeria">
+        <img src="photo3.png" alt="Imagen Galeria">
+        <img src="photo_4.png" alt="Imagen Galeria">
+        <img src="photo5.png" alt="Imagen Galeria">
+        <img src="photo6.png" alt="Imagen Galeria">
       </div>
 
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+    </main>
+
+    <footer class="footer contenedor">
+      <p>Created by <span class="nombre"> Agner Alexis Plascencia Amador </span> - <a href="https://devchallenges.io">devChallenges.io</a> </p>
+    </footer>
+
   </body>
 </html>
