Agrege card al div de persona-acerca

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 
         <div class="perfil-acerca">
 
-          <div class="perfil-acerca__post">
+          <div class="perfil-acerca__post card">
             <p class="perfil-acerca__post__numero">100</p>
             <p class="perfil-acerca__post__titulo">Post</p>
           </div>
 
-          <div class="perfil-acerca__follower">
+          <div class="perfil-acerca__follower card">
             <p class="perfil-acerca__follower__numero">2,242</p>
             <p class="perfil-acerca__follower__titulo">Follower</p>
           </div>
 
-          <div class="perfil-acerca__following">
+          <div class="perfil-acerca__following card">
             <p class="perfil-acerca__following__numero">1,432</p>
             <p class="perfil-acerca__following__titulo">Following</p>
           </div>
