Agrege la calse img para acomodarlas

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     <main class="contenedor">
 
       <div class="galeria">
-        <img src="photo1.png" alt="Imagen Galeria">
-        <img src="photo2.png" alt="Imagen Galeria">
-        <img src="photo3.png" alt="Imagen Galeria">
-        <img src="photo_4.png" alt="Imagen Galeria">
-        <img src="photo5.png" alt="Imagen Galeria">
-        <img src="photo6.png" alt="Imagen Galeria">
+        <img class="img1" src="photo1.png" alt="Imagen Galeria">
+        <img class="img2" src="photo2.png" alt="Imagen Galeria">
+        <img class="img3" src="photo3.png" alt="Imagen Galeria">
+        <img class="img4" src="photo_4.png" alt="Imagen Galeria">
+        <img class="img5" src="photo5.png" alt="Imagen Galeria">
+        <img class="img6" src="photo6.png" alt="Imagen Galeria">
       </div>
 
     </main>
